[package]
name = "ros2-client"
version = "0.1.0"
edition = "2018"
authors = ["Juhana Helovuo <juhana.helovuo@atostek.com>"]
description = "ROS2 client library based on RustDDS"
readme = "README.md"
keywords = ["network","protocol","dds","rtps"]
license = "Apache-2.0"
# homepage = "https://atostek.com/en/products/rustdds/"  
# repository = "https://github.com/jhelovuo/RustDDS"
categories = ["network-programming", "science::robotics"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdds ="~0.7"
mio = "^0.6.23"
mio-extras = "2.0.6"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
cdr-encoding-size = { version="^0.5" }
lazy_static = "1.4.0"
#concat-arrays = "0.1.2"

[dev-dependencies]
log = "0.4"
termion = "1.5.5"
pretty_env_logger = "0.4.0"
# turle_teleop
log4rs = "1"
test-case = "1.2.0"
ctrlc = "*"
